***************************************************************
** MovieJukebox Release Notes
***************************************************************

MovieJukebox 2.4 BETA
---------------------
 - Fixed defect  #793 Problems with more than 9 parts
 - Enhancement   #989 Multiple Directors
 - Fixed issue  #1036 Removed/renamed trailers stays in XML
 - Fixed defect #1484 Problem with series spanning more than 8 season on set page
 - Enhancement  #1594 Setting for thumbnails per page/line for sets
 - Fixed defect #1819 WebBrowser error halts processing
 - Enhancement  #1822 Overlay for fanart
 - Enhancement  #1823 Ability to skip genres
 - Fixed defect #1825 Order of addFrame and roundCorners changed
 - Enhancement  #1839 Only show Unwatched videos in the new categories
 - Fixed defect #1840 Fixed rounded corners on fanart
 - Fixed defect #1841 Trim down the index files (for Eversion)
 - Fixes defect #1844 fileImageFile is not encoded
 - Fixed defect #1845 Fanart scanner fails to find movie when title is different than original title
 - Enhancement  #1846 Add original index name to the Other category indexes
 - Enhancement  #1847 Change JPEG compression quality
 - Fixed issue  #1851 Overwrite parameters not working anymore
 - Enhancement  #1852 Animator Plugin (Russian)
 - Enhancement  #1854 AVCHD support
 - Fixes issue  #1855 VideoImages not being downloaded

MovieJukebox 2.3
----------------
 - Fixed defect  #808 Trailers: Periodic rescan option
 - Enhancement   #997 Ability to turn off 'EXTRAS' processing
 - Enhancement  #1012 Separate index.htm XSL file
 - Enhancement  #1131 Smarter location of set artwork
 - Fixed defect #1267 Titles from IMDB may include their (year/roman numeral) format
 - Fixed defect #1416 Trailer doesn't download
 - Fixed defect #1499 Allocine plugin should use new XML API
 - Fixed defect #1629 Rating problem with Allocine plugin
 - Fixed defect #1604 Set poster is not picked up correctly for series with ":" in the name