@@ -7,6 +7,7 @@ MovieJukebox 2.4 BETA
  - Fixed defect  #793 Problems with more than 9 parts
  - Enhancement   #989 Multiple Directors
  - Fixed issue  #1036 Removed/renamed trailers stays in XML
+ - Fixed issue  #1141 Allow fanart to be saved in png format
  - Fixed defect #1484 Problem with series spanning more than 8 season on set page
  - Enhancement  #1594 Setting for thumbnails per page/line for sets
  - Fixed defect #1819 WebBrowser error halts processing
